# rust_module2

./: README.md
quote_client/: Cargo.toml
quote_client/src/: args.rs  main.rs
streaming_quotes_project/: Cargo.toml  tickers.txt
streaming_quotes_project/src/: enums.rs  errors.rs  main.rs  parse.rs  stock_quote.rs  stock_sender.rs
