[package]
name = "streaming_quotes_project"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.9.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossbeam-channel = "0.5" // рекомендую на досуге почитать про библиотеку kanal она моделирует каналы из голанга в общем быстро
clap = { version = "4.5.51", features = ["derive"] } 
